# FABE

./: .gitignore  CMakeLists.txt  Makefile  README.md  be.cpp  be.hpp  bitset.hpp  build  conversion.cpp  conversion.hpp  create_problematic  export.hpp  fa.h  io.cpp  io.hpp  kmeans.cpp  kmeans.hpp  log.hpp  main.cpp  main.hpp  minimise.cpp  minimise.hpp  order.cpp  order.hpp  profile  profile.sh  qcachegrind  random_order  slurm_submit  test_all  test_mbe  types.hpp  util.hpp
datasets/mpe/: simple2.uai
datasets/mpe/cpcs/: cpcs179.erg  cpcs360b.erg  cpcs54.erg
datasets/mpe/grid/: 75-16-5.uai  75-17-5.uai  75-18-5.uai  75-19-5.uai  75-20-5.uai  75-21-5.uai  75-22-5.uai  75-23-5.uai  75-24-5.uai  75-25-5.uai  75-26-5.uai
datasets/mpe/grids/: 90-10-1.erg  90-14-1.erg  90-16-1.erg  90-24-1.erg  90-24-1e20.erg  90-24-1e20.erg.evid  90-26-1e20.erg.evid  90-26-1e40.erg  90-26-1e40.erg.evid  90-30-1e60.erg  90-30-1e60.erg.evid  90-30-1e80.erg.evid  90-34-1e100.erg.evid  90-34-1e80.erg  90-34-1e80.erg.evid  90-38-1e120.erg.evid  90-38-1e80.erg  90-38-1e80.erg.evid
datasets/mpe/iscas89/: c432.isc.erg  c499.isc.erg  c880.isc.erg  s1196.scan.erg  s1238.scan.erg  s1423.scan.erg  s1488.scan.erg  s1494.scan.erg  s953.scan.erg
datasets/mpe/linkage/: pedigree1.erg  pedigree13.erg  pedigree18.erg  pedigree19.erg  pedigree20.erg  pedigree23.erg  pedigree25.erg  pedigree30.erg  pedigree31.erg  pedigree33.erg  pedigree34.erg  pedigree37.erg  pedigree38.erg  pedigree39.erg  pedigree40.erg  pedigree41.erg  pedigree42.erg  pedigree44.erg  pedigree50.erg  pedigree51.erg  pedigree7.erg  pedigree9.erg
datasets/mpe/pedigree/: pedigree38.uai  pedigree39.uai  pedigree50.uai
datasets/wcsp/: README.md  figure4.lp  figure4.wcsp  wcsp2lp-direct.py  wcsp2lp.csv
datasets/wcsp/celar6/: CELAR6-SUB0.wcsp  CELAR6-SUB1-24.wcsp  CELAR6-SUB1.wcsp  CELAR6-SUB2.wcsp  CELAR6-SUB3.wcsp  CELAR6-SUB4-20.wcsp  CELAR6-SUB4.wcsp
datasets/wcsp/iscas89/: c432.lp  c432.wcsp  c499.lp  c499.wcsp  c880.lp  c880.wcsp  s1196.lp  s1196.wcsp  s1238.lp  s1238.wcsp  s1423.lp  s1423.wcsp  s1488.lp  s1488.wcsp  s1494.lp  s1494.wcsp  s386.lp  s386.wcsp  s953.lp  s953.wcsp
datasets/wcsp/mastermind/: mastermind_03_08_03.lp  mastermind_03_08_03.wcsp  mastermind_03_08_04.lp  mastermind_03_08_04.wcsp  mastermind_03_08_05.lp  mastermind_03_08_05.wcsp  mastermind_04_08_03.lp  mastermind_04_08_03.wcsp  mastermind_04_08_04.lp  mastermind_04_08_04.wcsp  mastermind_10_08_03.lp  mastermind_10_08_03.wcsp
datasets/wcsp/spot5/: 29.lp  29.wcsp  404.lp  404.wcsp  408b.lp  408b.wcsp  42b.lp  42b.wcsp  503.lp  503.wcsp  505b.lp  505b.wcsp  54.lp  54.wcsp
datasets/wcsp/test/: 0.wcsp  1.wcsp  10.wcsp  11.wcsp  12.wcsp  13.wcsp  14.wcsp  15.wcsp  16.wcsp  17.wcsp  18.wcsp  19.wcsp  2.wcsp  20.wcsp  21.wcsp  22.wcsp  23.wcsp  24.wcsp  25.wcsp  26.wcsp  27.wcsp  28.wcsp  29.wcsp  3.wcsp  30.wcsp  31.wcsp  32.wcsp  33.wcsp  34.wcsp  35.wcsp  36.wcsp  37.wcsp  38.wcsp  39.wcsp  4.wcsp  40.wcsp  5.wcsp  6.wcsp  7.wcsp  8.wcsp  (+1 more)
libfa/: config.h  fa.c  fa.h  internal.h  memory.h
scripts/: generate_pt  run_aolib_fabe  run_rbfaoo_mbe  test_all  test_mbe
